--- a/página-login03/index.html
+++ b/página-login03/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header class="header">
         <img
-          src="imagens/statistics-graph-svgrepo-com.svg"
+          src="imagens/statistics-graph-chart-pie-svgrepo-com.svg"
           alt="logo-header"
           class="logo-header"
         />
@@ -31,13 +31,8 @@
         </form>
       </main>
     </div>
-    <footer>
-      <img
-        src="imagens/statistics-graph-svgrepo-com.svg"
-        alt="logo-footer"
-        class="logo-footer"
-      />
-      <a href="#"><< Próxima página >></a>
+    <footer class="footer">
+      <a href="#" class="a-footer"><< Próxima página >></a>
     </footer>
   </body>
 </html>
