--- a/página-login03/index.html
+++ b/página-login03/index.html
@@ -22,17 +22,17 @@
         </div>
       </header>
       <main>
-        <form>
+        <form class="form">
           <label for="nome">Nome:</label>
           <input type="text" name="nome" id="nome" required /> <br />
           <label for="senha">Senha:</label>
-          <input type="password" name="senha" id="senha" /> <br />
+          <input type="password" name="senha" id="senha" required /> <br />
           <input type="submit" value="Enviar" />
         </form>
       </main>
     </div>
     <footer class="footer">
-      <a href="#" class="a-footer"><< Próxima página >></a>
+      <a href="#" class="a"><< Próxima página >></a>
     </footer>
   </body>
 </html>
