--- a/página-login04/index.html
+++ b/página-login04/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="login">
+    <div id="login">
       <form class="card">
         <div class="card-header">
           <h2>Login</h2>
