--- a/página-login02/index.html
+++ b/página-login02/index.html
@@ -9,20 +9,24 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
-        <img
-          src="imagens/3d-square-svgrepo-com.svg"
-          alt="logo-estat"
-          class="logo-estat"
-        />
-        <h1>Estatistíca Hard</h1>
+      <div class="header">
+        <header>
+          <div class="card-header">
+            <img
+              src="imagens/3d-square-svgrepo-com.svg"
+              alt="logo-estat"
+              class="logo-estat"
+            />
+            <h1>Estatistíca Hard</h1>
 
-        <div class="nav">
-          <button class="button-nav">Home</button>
-          <button class="button-nav">Cursos</button>
-          <button class="button-nav">Contatos</button>
-        </div>
-      </header>
+            <div class="nav">
+              <button class="button-nav">Home</button>
+              <button class="button-nav">Cursos</button>
+              <button class="button-nav">Contatos</button>
+            </div>
+          </div>
+        </header>
+      </div>
       <section>
         <div class="main-content">
           <h2>Título</h2>
@@ -54,13 +58,11 @@
         </div>
       </section>
     </div>
-    <footer class="footer">
-      <img
-        src="imagens/3d-square-svgrepo-com.svg"
-        alt="logo-footer"
-        class="logo-footer"
-      />
-      <a href="#">Volte ao topo!</a>
-    </footer>
+
+    <div class="footer">
+      <footer>
+        <a href="#">Volte ao topo!</a>
+      </footer>
+    </div>
   </body>
 </html>
