--- a/página-login02/index.html
+++ b/página-login02/index.html
@@ -11,20 +11,7 @@
     <div class="container">
       <div class="header">
         <header>
-          <div class="card-header">
-            <img
-              src="imagens/3d-square-svgrepo-com.svg"
-              alt="logo-estat"
-              class="logo-estat"
-            />
-            <h1>Estatistíca Hard</h1>
-
-            <div class="nav">
-              <button class="button-nav">Home</button>
-              <button class="button-nav">Cursos</button>
-              <button class="button-nav">Contatos</button>
-            </div>
-          </div>
+          <h1 class="title-header">Estatística Hard</h1>
         </header>
       </div>
       <section>
