--- a/página-login02/index.html
+++ b/página-login02/index.html
@@ -7,49 +7,5 @@
     <title>login</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <header>
-          <h1 class="title-header">Estatística Hard</h1>
-        </header>
-      </div>
-      <section>
-        <div class="main-content">
-          <h2>Título</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            dolores vel labore consequuntur commodi explicabo, minima quos optio
-            ab. Nam ea magni ullam impedit rerum aspernatur, iure nobis
-            perferendis suscipit minus facilis qui perspiciatis, esse vero ipsam
-            sint, hic obcaecati cum temporibus deleniti totam accusamus! In
-            minus perspiciatis qui illo!
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
-            minima animi nesciunt odit aliquid numquam quos? Dolor, facilis
-            quae. Magni cum libero consequuntur quos id iusto, corrupti nam
-            perspiciatis nihil ipsam, ipsum quis sapiente reiciendis illo
-            maiores. Quibusdam eius temporibus minima, eveniet illum possimus
-            expedita recusandae hic sapiente veritatis quae tempora deserunt?
-            Illo ducimus praesentium impedit laborum accusantium suscipit eius
-            fugit, earum ea. Non ipsum voluptatibus aliquam fugiat quam
-            repudiandae porro ea possimus aliquid tempore? Reprehenderit,
-            perspiciatis quis. Beatae harum laborum hic sapiente eius provident
-            iste sunt! Cupiditate, magni quis. Nobis impedit reiciendis iusto
-            dolorum assumenda optio error quo eum labore, sapiente accusamus in
-            fuga voluptate odit molestias. Animi, ipsum error eaque
-            reprehenderit consequuntur fugiat veniam laudantium adipisci
-            suscipit sit amet a dolorem quisquam, quod dolore esse quis quam!
-          </p>
-        </div>
-      </section>
-    </div>
-
-    <div class="footer">
-      <footer>
-        <a href="#">Volte ao topo!</a>
-      </footer>
-    </div>
-  </body>
+  <body></body>
 </html>
