--- a/página-login02/index.html
+++ b/página-login02/index.html
@@ -8,106 +8,132 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="https://front.codes/" class="logo" target="_blank">
-      <img src="https://assets.codepen.io/1462889/fcy.png" alt="" />
-    </a>
-
-    <div class="section">
-      <div class="container">
-        <div class="row full-height justify-content-center">
-          <div class="col-12 text-center align-self-center py-5">
-            <div class="section pb-5 pt-5 pt-sm-2 text-center">
-              <h6 class="mb-0 pb-3">
-                <span>Log In </span><span>Sign Up</span>
-              </h6>
-              <input
-                class="checkbox"
-                type="checkbox"
-                id="reg-log"
-                name="reg-log"
-              />
-              <label for="reg-log"></label>
-              <div class="card-3d-wrap mx-auto">
-                <div class="card-3d-wrapper">
-                  <div class="card-front">
-                    <div class="center-wrap">
-                      <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Log In</h4>
-                        <div class="form-group">
-                          <input
-                            type="email"
-                            name="logemail"
-                            class="form-style"
-                            placeholder="Your Email"
-                            id="logemail"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-at"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input
-                            type="password"
-                            name="logpass"
-                            class="form-style"
-                            placeholder="Your Password"
-                            id="logpass"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-lock-alt"></i>
-                        </div>
-                        <a href="#" class="btn mt-4">submit</a>
-                        <p class="mb-0 mt-4 text-center">
-                          <a href="#0" class="link">Forgot your password?</a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card-back">
-                    <div class="center-wrap">
-                      <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Sign Up</h4>
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="logname"
-                            class="form-style"
-                            placeholder="Your Full Name"
-                            id="logname"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-user"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input
-                            type="email"
-                            name="logemail"
-                            class="form-style"
-                            placeholder="Your Email"
-                            id="logemail"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-at"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input
-                            type="password"
-                            name="logpass"
-                            class="form-style"
-                            placeholder="Your Password"
-                            id="logpass"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-lock-alt"></i>
-                        </div>
-                        <a href="#" class="btn mt-4">submit</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+    <div class="section over-hide z-bigger">
+      <input class="checkbox" type="checkbox" name="general" id="general">
+      <label class="for-checkbox" for="general"></label>
+      <div class="background-color"></div>
+      <div class="section over-hide z-bigger">
+        <div class="container pb-5">
+          <div class="row justify-content-center pb-5">
+            <div class="col-12 pt-5">
+              <p class="mb-4 pb-2">Design Tools</p>
+            </div>
+            <div class="col-12 pb-5">
+              <input class="checkbox-tools" type="radio" name="tools" id="tool-1" checked>
+              <label class="for-checkbox-tools" for="tool-1">
+                <i class='uil uil-line-alt'></i>
+                line
+              </label><!--
+              --><input class="checkbox-tools" type="radio" name="tools" id="tool-2">
+              <label class="for-checkbox-tools" for="tool-2">
+                <i class='uil uil-vector-square'></i>
+                square
+              </label><!--
+              --><input class="checkbox-tools" type="radio" name="tools" id="tool-3">
+              <label class="for-checkbox-tools" for="tool-3">
+                <i class='uil uil-ruler'></i>
+                ruler
+              </label><!--
+              --><input class="checkbox-tools" type="radio" name="tools" id="tool-4">
+              <label class="for-checkbox-tools" for="tool-4">
+                <i class='uil uil-crop-alt'></i>
+                crop
+              </label><!--
+              --><input class="checkbox-tools" type="radio" name="tools" id="tool-5">
+              <label class="for-checkbox-tools" for="tool-5">
+                <i class='uil uil-brush-alt'></i>
+                brush
+              </label><!--
+              --><input class="checkbox-tools" type="radio" name="tools" id="tool-6">
+              <label class="for-checkbox-tools" for="tool-6">
+                <i class='uil uil-image-resize-landscape'></i>
+                resize
+              </label>
+            </div>
+            <div class="col-12 pt-1">
+              <p class="mb-4 pb-2">Client Budget</p>
+            </div>
+            <div class="col-xl-10 pb-5">
+              <input class="checkbox-budget" type="radio" name="budget" id="budget-1" checked>
+              <label class="for-checkbox-budget" for="budget-1">
+                <span data-hover="500$">500$</span>
+              </label><!--
+              --><input class="checkbox-budget" type="radio" name="budget" id="budget-2">
+              <label class="for-checkbox-budget" for="budget-2">							
+                <span data-hover="1000$">1000$</span>
+              </label><!--
+              --><input class="checkbox-budget" type="radio" name="budget" id="budget-3">
+              <label class="for-checkbox-budget" for="budget-3">							
+                <span data-hover="1500$">1500$</span>
+              </label><!--
+              --><input class="checkbox-budget" type="radio" name="budget" id="budget-4">
+              <label class="for-checkbox-budget" for="budget-4">							
+                <span data-hover="2000$">2000$</span>
+              </label><!--
+              --><input class="checkbox-budget" type="radio" name="budget" id="budget-5">
+              <label class="for-checkbox-budget" for="budget-5">							
+                <span data-hover="2500$">2500$</span>
+              </label><!--
+              --><input class="checkbox-budget" type="radio" name="budget" id="budget-6">
+              <label class="for-checkbox-budget" for="budget-6">							
+                <span data-hover="5000$">5000$</span>
+              </label>
+            </div>
+            <div class="col-12 pt-1">
+              <p class="mb-4 pb-2">Booking Options</p>
+            </div>
+            <div class="col-12 pb-5">
+              <input class="checkbox-booking" type="checkbox" name="booking" id="booking-1">
+              <label class="for-checkbox-booking" for="booking-1">
+                <i class='uil uil-coffee mr-3'></i><span class="text">breakfast</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-2">
+              <label class="for-checkbox-booking" for="booking-2">							
+                <i class='uil uil-restaurant mr-3'></i><span class="text">dinner</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-3">
+              <label class="for-checkbox-booking" for="booking-3">							
+                <i class='uil uil-car-sideview mr-3'></i><span class="text">pick up</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-4">
+              <label class="for-checkbox-booking" for="booking-4">							
+                <i class='uil uil-flower mr-3'></i><span class="text">garden</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-5">
+              <label class="for-checkbox-booking" for="booking-5">							
+                <i class='uil uil-wifi mr-3'></i><span class="text">internet</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-6">
+              <label class="for-checkbox-booking" for="booking-6">							
+                <i class='uil uil-parking-square mr-3'></i><span class="text">parking</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-7">
+              <label class="for-checkbox-booking" for="booking-7">							
+                <i class='uil uil-tv-retro mr-3'></i><span class="text">television</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-8">
+              <label class="for-checkbox-booking" for="booking-8">							
+                <i class='uil uil-books mr-3'></i><span class="text">books</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-9">
+              <label class="for-checkbox-booking" for="booking-9">							
+                <i class='uil uil-kayak mr-3'></i><span class="text">kayak</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-10">
+              <label class="for-checkbox-booking" for="booking-10">							
+                <i class='uil uil-glass-martini-alt mr-3'></i><span class="text">drink</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-11">
+              <label class="for-checkbox-booking" for="booking-11">							
+                <i class='uil uil-dumbbell mr-3'></i><span class="text">gym</span>
+              </label><!--
+              --><input class="checkbox-booking" type="checkbox" name="booking" id="booking-12">
+              <label class="for-checkbox-booking" for="booking-12">							
+                <i class='uil uil-sign-alt mr-3'></i><span class="text">walking tours</span>
+              </label>
             </div>
           </div>
-        </div>
+        </div>	
       </div>
     </div>
   </body>
